desktop nav bar fixed, article icons display correctly on mobile

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -57,12 +57,22 @@ nav {
  }
 
  .logo{
-    min-width: 125px;
-    min-height: 125px;
+    min-width: 110px;
+    min-height: 110px;
  }
 
  .space-highlight:hover{
-     opacity: 0.2;
-     color: white;
-
+    opacity: 0.65;
+    color: white !important;
+    background-color: transparent !important;
  }
+
+ @media screen and (max-width:769px) {
+    .small-screen {
+        width: 20%;
+        margin: 0;
+        border: 0;
+        /* justify-content: center;
+        position: relative; */
+    }
+}
